# weir-qos

./: .clang-format  .flake8  .gitignore  .gitleaksignore  .hadolint.yaml  .lintrc.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  ISSUE_TEMPLATE.md  README.md  docker-compose.yaml  mypy.ini  requirements.txt
.github/: CODEOWNERS  build-and-test.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-test.yml  lint.yml
docs/: architecture_overview.md  limit-enforcement.md  scope.md  syslog-server-api.md
examples/dev_cfg/: haproxy_localdev.conf  policy_generator_localdev.yml  polygen_user_limits.json  redis_localdev.conf  syslog_server.localdev.yml
haproxy-lua/: .gitignore  CMakeLists.txt  README.md  activate.sh  deactivate.sh
haproxy-lua/added-files/include/haproxy/: khash.h  rate_limit.h
haproxy-lua/added-files/src/: flt_weir.c  rate_limit.c
haproxy-lua/patches/: 0001-Initial-commit-of-Weir-QoS.patch  0002-Add-old-rate-limit-system-specific-hlua-and-Makefile.patch  0002-BUG-MEDIUM-hlua-fix-hlua_applet_-http-tcp-_fct-yield.patch  0003-Add-old-rate-limit-system-specific-hlua-and-Makefile.patch  0003-Convert-freq_ctr_overshoot_period-to-return-a-uint.patch  haprox-v3-2-0.patch
haproxy-lua/src/: haproxy_lua.lua  weir-s3.lua
haproxy-lua/tests/: CMakeLists.txt  haproxy_lua_tests.lua  weir-s3-tests.lua
integration-tests/: .gitignore  randsrv.py  requirements.txt  syslog-bench.cpp  test_authed_bandwidth.sh  test_authed_verbs.sh  test_bandwidth.sh  test_bandwidth_limit_accuracy.py  test_connection_limiting.py  test_healthcheck.sh  test_verbs.sh
polygen/: README.md  policy_generator.py  polygen_redis_get.lua  pyproject.toml  qos_metrics_exposer.py  qos_metrics_publisher.py  requirements-dev.txt  requirements.txt
polygen/tests/: test_metric_service.py  test_policy_generator.py  test_user_metrics.py  test_violations.py
polygen/weir/models/: user_metrics.py  violations.py
polygen/weir/services/: metric_service.py
syslog_server/: .clang-tidy  CMakeLists.txt  README.md
syslog_server/src/: CMakeLists.txt  common.cpp  common.h  main.cpp  msg_processor.cpp  msg_processor.h  processor_config.cpp  processor_config.h  redis_utils.cpp  redis_utils.h  stringsplit.cpp  stringsplit.h  syscall_wrapper.cpp  syscall_wrapper.h  syslog_server.cpp  syslog_server.h  time_wrapper.cpp  time_wrapper.h
syslog_server/tests/: CMakeLists.txt  msg_processor_tests.cpp  redis_utils_tests.cpp  stringsplit_tests.cpp  syslog_server_tests.cpp  test_common.h
